update for staging

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
   {% block body %}
   <div class="content">
-    <h1 text-aligh="center">Task Master (Github updated)</h1>
+    <h1 text-aligh="center">Task Master (Staging)</h1>
     {% if tasks|length < 1 %}
     <h4 style="text-align: center">No tasks yet. Add a task to get started.</h4>
     {% else %}
